# Gadget

./: README.md  readme.md
0/: readme.md
0/7-dynamic-linking/7-5/: elf.h  stack_init_info.c
0/7-dynamic-linking/7-7-5/: RunSo
7-dynamic-linking/7-7-4/: RunSoSimple  RunSoSimple.c
7-dynamic-linking/7-7-5/: RunSo.c
Docker/dockerfile_with_xinetd/: Dockerfile  simple.xinetd
cmake/: CMakeLists.txt  Readme.md
cmake/include/: lib.h
cmake/src/: lib.c  simple.c
editor/: Readme.md  kilo  kilo.c
editor/lesson3/: kilo  kilo.c
hex_editor/: Makefile  README.md  kilo  kilo.c
module/: operate.c  simple.c
net/ipip_tunnel/: readme.md  simple.sh
qemu/: init  readme.md  run.sh
x86/c_asm/at_and_t/: simple.c
x86/c_asm/intel/: simple  simple.c
x86/ld/: simple  simple.c
x86/ld/ld_script/: easy.lds  simple  simple.c
x86_64/asm_with_self_defined_header/mini_hook/: hook
x86_64/c_asm/at_and_t/: simple  simple.c
x86_64/c_asm/intel/: simple  simple.c
x86_64/ld/: simple  simple.c
x86_64/ld/ld_script/: easy.lds  simple  simple.c
x86_64/sandbox/c/: simple  simple.c
x86_64/smallest_elf/: simple  simple.asm
x86_64/smallest_elf/mini_hook/: hook.asm
xinetd/: simple
